--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,15 +34,13 @@
         android:id="@+id/alert"
         android:layout_width="120dp"
         android:layout_height="70dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="74dp"
-        android:layout_marginEnd="235dp"
-        android:layout_marginBottom="587dp"
         android:text="@string/alert"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.18"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.110000014" />
 
     <Button
         android:id="@+id/birdbird"
